--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 
@@ -148,13 +145,13 @@ main .container {
 }
 
 /* =============== Left ============== */
-.left {
+main .container .left {
     height: max-content;
     position: sticky;
     top: var(--sticky-top-left);
 }
 
-.left .profile {
+main .container .left .profile {
     padding: var(--card-padding);
     background: var(--color-white);
     border-radius: var(--card-border-radius);
